# pongbot-mcp

./: .gitignore  CLAUDE.md  LICENSE  PREFLIGHT_REPORT.md  PUBLIC_ARTIFACT_SUMMARY.md  README.md  claude_desktop_config_snippet.json  pyproject.toml
captures/: btsnoop_hci.log.last
docs/prompts/: public-artifact-polish.md
scripts/: compare_packets.py  debug_auth.py  discover.py  keepalive_test.py  smoke_test.py
src/pongbot_mcp/: __main__.py  ble.py  presets.py  protocol.py  server.py
tests/: test_presets.py  test_protocol.py
