[project]
name = "pongbot-mcp"
version = "0.1.0"
description = "MCP server for controlling a Pongbot Nova S Pro over BLE"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bleak>=2.1.1",
    "mcp[cli]>=1.26.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pongbot_mcp"]
